# ella

./: .gitignore  README.md  accuracy_fix.txt  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
docs/: linkedin_post.md
ella_medical/: __init__.py  client.py  models.py
src/: api.py  cli.py  debug_db.py  evaluation.py  main.py  test_connections.py
src/agents/: guardrails.py  router.py
src/engine/: bm25_retriever.py  ingest.py  migrate_chroma_to_pinecone.py  nim_embeddings.py  numpy_retriever.py  raw_retriever.py  retriever.py  test_ingest.py
tests/: test_sdk.py
