[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ella-sdk"
version = "1.1.8"
description = "Medical Triage & Clinical RAG Engine"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Daniel Deshmukh", email = "deshmukhdaniel2005@gmail.com"}
]
keywords = ["medical", "triage", "rag", "clinical", "nvidia", "pinecone", "healthcare"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "httpx>=0.27.0",
    "gradio_client>=1.3.0",
]

[project.optional-dependencies]
server = [
    "langchain",
    "langchain-openai",
    "langchain-groq",
    "langchain-pinecone",
    "langgraph",
    "sentence-transformers",
    "pinecone-client",
    "rank-bm25",
    "fastapi",
    "uvicorn",
    "typer[all]",
    "python-dotenv",
    "pydantic",
    "rich",
]

[project.scripts]
ella = "src.cli:main"

[tool.setuptools.packages.find]
include = ["ella_medical*", "src*"]
